--- a/app/views/games/new.html.erb
+++ b/app/views/games/new.html.erb
@@ -1,4 +1,4 @@
-<div class="container pt-5 col-4 text-center">
+<div class="container pt-5 col-6 text-center">
   <h1 class="pb-5">New game</h1>
   <ul>
     <% @letters.each do |letter| %>
@@ -7,4 +7,15 @@
       </li>
     <% end %>
   </ul>
+
+  <p>
+    What is the longest word you can find?
+  </p>
+
+  <form action="/score" method="POST" data-turbo="false">
+    <%= hidden_field_tag :authenticity_token, form_authenticity_token %>
+    <%= hidden_field_tag :letters, @letters %>
+    <input type="text" name='word'>
+    <input type="submit">
+  </form>
 </div>
