add helper methods

--- a/app/views/games/score.html.erb
+++ b/app/views/games/score.html.erb
@@ -1,2 +1,7 @@
-<h1>Games#score</h1>
-<p>Find me in app/views/games/score.html.erb</p>
+<h1>Result</h1>
+
+<%= @valid %>
+<%= @english %>
+<%= @word %>
+
+<%= link_to "Play again", new_path %>
